fix: Contact component planet and logo images have bad proportions on smaller devices

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -324,7 +324,7 @@
 			"planet"
 			"contact";
 		grid-template-columns: 1fr;
-		grid-template-rows: min-content 2fr 1fr 1fr;
+		grid-template-rows: min-content 2fr 1fr min-content;
 		justify-content: center;
 	}
 
